--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Fitness Edu - Plataforma Educativa</title>
+    <title>EPEFI - Gimnasio escuela</title>
     <meta name="description" content="Plataforma educativa personal para instructorado de fitness grupal" />
-    <meta name="author" content="Fitness Education Platform" />
+    <meta name="author" content="EPEFI - Gimnasio escuela" />
 
-    <meta property="og:title" content="Fitness Edu - Plataforma Educativa" />
+    <meta property="og:title" content="EPEFI - Gimnasio escuela" />
     <meta property="og:description" content="Plataforma educativa personal para instructorado de fitness grupal" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
@@ -25,8 +25,6 @@
 
   <body>
     <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
